[package]
name = "xdrugpy_hotspot_finder"
authors = [
    "Pedro Sousa Lacerda <pslacerda@gmail.com>"
]
version = "1.0.0"
edition = "2024"

[[bin]]
name = "xdrugpy_hotspot_finder"
path = "src/main.rs"

[dependencies]
kiddo = "5.3.1"
num-traits = "0.2.19"
petgraph = "0.8.3"
ordered-float = "5.3.0"
derive_more = { version = "2.1.1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
