[package]
name = "xdrugpy_hotspot_finder"
authors = [
    "Pedro Sousa Lacerda <pslacerda@gmail.com>"
]
version = "1.0.0"
edition = "2024"

[[bin]]
name = "xdrugpy_hotspot_finder"
path = "src/main.rs"

[lib]
name = "xdrugpy_hotspot_finder"
crate-type = ["cdylib", "rlib"]

[dependencies]
kiddo = "5.3.1"
petgraph = "0.8.3"
ordered-float = "5.3.0"
derive_more = { version = "2.1.1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
anyhow = "1.0.102"
pyo3 = "0.28.3"
approx = "0.5.1"

[lints.clippy]
manual_range_contains = "allow"
type_complexity = "allow"
get_first = "allow"